--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -26,6 +26,13 @@
         display: flex;
         flex-direction: column;
     }
+    .base-home .side-left {
+        height: 70vh;
+    }
+    .base-home .side-right {
+        height: auto;
+        overflow-y: hidden;
+    }
 }
 
 
